# sporesong-python

./: .gitignore  README.md  pyproject.toml
client/: pyproject.toml
client/src/client/: client.py  main.py
lib/: pyproject.toml
lib/src/lib/cryptography/: key.py
lib/src/lib/messages/: message.py  message_body.py
lib/src/lib/networking/: client.py  host.py  server.py
proxy/: pyproject.toml
proxy/src/proxy/: main.py  proxy.py
scripts/: cryptography-testing.py  network-client-test.py  network-host-test.py
server/: compose.yaml  pyproject.toml
server/src/server/: __init__.py  config.py  database.py  main.py  server.py
