[project]
name = "sporesong-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["lib", "ruff>=0.15.2", "websockets>=16.0"]

[tool.uv.sources]
lib = { workspace = true }

[tool.uv.workspace]
members = ["client", "server", "proxy", "lib"]
