[project]
name = "lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Orion Hess", email = "orionhess@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "numpy>=2.4.2",
]

[tool.uv.sources]
cryptography = { git = "https://github.com/pyca/cryptography" }

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
