[project]
name = "proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Orion Hess", email = "orionhess@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
proxy = "proxy:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
